Fix invisible scrollbar

--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,7 +1,3 @@
-* {
-  scrollbar-width: none
-}
-
 *::-webkit-scrollbar {
   display: none;
 }
